# wmm2015_explorer

./: CMakeLists.txt  LICENSE  README.md
src/: wmm_dump.c  wmm_file.c  wmm_grid.c  wmm_point.c
